<resources>
    <string name="app_name">Aggie MapS</string>
    <string name="directional_arrow">Directional Arrow</string>
    <string name="loading">Loading...</string>
    <string name="favorites">Favorites</string>
    <string name="on_campus">On Campus</string>
    <string name="off_campus">Off Campus</string>
    <string name="game_day">Game Day</string>
    <string name="buses">Buses</string>
    <string name="bus_icon">Bus Icon</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="shows_timetable">Shows TimeTable</string>
    <string name="time_table">Time Table</string>
    <string name="try_another_date">Try Another Date</string>
    <string name="no_more_buses">No more buses are running today</string>
    <string name="trip_type_for_route">Trip Type for Route</string>
    <string name="view_more">View more</string>
    <string name="voice_to_text">Voice to text</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>