<?xml version="1.0" encoding="utf-8"?>
<fragment xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/map"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MapsFragment">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/standard_bottom_sheet"
        style="@style/ThemeOverlay.App.BottomSheetDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:orientation="vertical"
            android:paddingLeft="36dp"
            android:paddingTop="65dp">

            <TextView
                android:id="@+id/favorites_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:text="@string/favorites"
                android:textColor="@color/foreground"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_favorites"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"

                android:paddingBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:text="@string/on_campus"
                android:textColor="@color/foreground"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_oncampus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:text="@string/off_campus"
                android:textColor="@color/foreground"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_offcampus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="sans-serif-medium"
                android:paddingStart="6dp"
                android:paddingEnd="6dp"
                android:paddingTop="6dp"
                android:text="@string/game_day"
                android:textColor="@color/foreground"
                android:textSize="17sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_gameday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingBottom="16dp" />

        </LinearLayout>

        <!-- Bottom sheet contents. -->

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@color/background"
            app:cardCornerRadius="25dp"
            app:contentPadding="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.button.MaterialButton
                    android:layout_width="45dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:backgroundTint="@color/foreground"
                    android:stateListAnimator="@null"
                    app:cornerRadius="25dp" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>


    </FrameLayout>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/bus_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/foreground"
            app:cardCornerRadius="25dp"
            app:contentPadding="6dp"
            android:layout_gravity="end|bottom"
            app:layout_anchorGravity="bottom|right|end"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginBottom="44dp"
            android:layout_marginEnd="23dp"
            android:elevation="8dp">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/bus_icon"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/bus"
                    android:layout_centerVertical="true"
                    app:tint="@color/background"
                    android:contentDescription="@string/bus_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@id/bus_icon"
                    android:text="@string/buses"
                    android:textSize="16sp"
                    android:textColor="@color/background"
                    android:layout_centerVertical="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"/>

                <com.google.android.material.button.MaterialButton
                    android:layout_width="14dp"
                    android:layout_height="2dp"
                    android:focusable="false"
                    android:clickable="false"
                    android:layout_centerHorizontal="true"
                    app:cornerRadius="25dp"
                    android:backgroundTint="@color/background" />

            </RelativeLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</fragment>